Bug 38442 - [i945GM] hotplug irq storm
Summary: [i945GM] hotplug irq storm
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - Intel) (show other bugs)
Hardware: All Linux
: P1 high
Assignee: drivers_video-dri-intel@kernel-bugs.osdl.org
URL: https://bugs.gentoo.org/show_bug.cgi?...
Keywords:
Depends on:
Blocks:
 
Reported: 2011-06-28 15:20 UTC by Dominik Köppl
Modified: 2012-10-15 21:21 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.5.1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
kernel conifguration of linux-3.0-rc5 (73.46 KB, application/octet-stream)
2011-06-28 15:20 UTC, Dominik Köppl
Details
dmesg output (55.51 KB, application/octet-stream)
2011-06-28 15:20 UTC, Dominik Köppl
Details
lspci output (26.08 KB, text/plain)
2011-06-28 15:24 UTC, Dominik Köppl
Details
kernel profiling with `perf record -a` (41.49 KB, text/plain)
2012-03-26 20:39 UTC, Dominik Köppl
Details
profiling kworker/u:0 (3.66 KB, text/plain)
2012-03-26 20:40 UTC, Dominik Köppl
Details
/proc/interrupts (1.50 KB, text/plain)
2012-03-27 07:41 UTC, Dominik Köppl
Details
vmstat 1 (9.30 KB, text/plain)
2012-03-27 07:45 UTC, Dominik Köppl
Details
vmstat 1 with i915-kms (5.62 KB, text/plain)
2012-03-27 07:59 UTC, Dominik Köppl
Details
/proc/interrupts with i915-kms (1.49 KB, text/plain)
2012-03-27 08:00 UTC, Dominik Köppl
Details
detailed interrupt sources for i915 (5.27 KB, patch)
2012-03-27 09:01 UTC, Daniel Vetter
Details | Diff
cat /sys/kernel/debug/dri/0/i915_gem_interrupt (515 bytes, text/plain)
2012-03-27 10:34 UTC, Dominik Köppl
Details
cat /sys/kernel/debug/dri/0/i915_gem_interrupt after sleep 10 (515 bytes, text/plain)
2012-03-27 10:35 UTC, Dominik Köppl
Details
dump hotplug regs (1.29 KB, patch)
2012-03-28 08:07 UTC, Daniel Vetter
Details | Diff
dmesg output after applying patch (117.42 KB, text/plain)
2012-03-29 20:28 UTC, Dominik Köppl
Details
xrandr output (607 bytes, text/plain)
2012-03-30 11:06 UTC, Dominik Köppl
Details
huge kernel log with drm.debug=0xe (59.62 KB, application/gzip)
2012-03-30 11:12 UTC, Dominik Köppl
Details
disable sdvob hotplug (638 bytes, patch)
2012-03-31 14:47 UTC, Daniel Vetter
Details | Diff
complete dmesg with drm.debug=0xe (72.23 KB, text/plain)
2012-03-31 19:56 UTC, Dominik Köppl
Details
xrandr output with kernel 2.6.36-gentoo-r8 and no kms (606 bytes, text/plain)
2012-03-31 20:07 UTC, Dominik Köppl
Details
printk hotplug_active (640 bytes, patch)
2012-03-31 20:54 UTC, Daniel Vetter
Details | Diff
dmesg - printk hotplug_active (73.44 KB, text/plain)
2012-04-01 13:31 UTC, Dominik Köppl
Details
retrieve sdo irq event source response (1.05 KB, patch)
2012-04-15 15:01 UTC, Daniel Vetter
Details | Diff
fixup sdvo hotplug confusion (4.80 KB, patch)
2012-04-15 15:55 UTC, Daniel Vetter
Details | Diff
intel_bios_dumper output (64.00 KB, application/octet-stream)
2012-04-17 08:21 UTC, Dominik Köppl
Details
disable sdvo hotplug on i945 (1.42 KB, patch)
2012-04-26 13:36 UTC, Daniel Vetter
Details | Diff
don't enable the sdvo hotplug if not needed (2.18 KB, patch)
2012-08-12 17:02 UTC, Daniel Vetter
Details | Diff
patch for kernel-3.5.1 : don't enable the sdvo hotplug if not needed (1.58 KB, patch)
2012-08-13 11:40 UTC, Dominik Köppl
Details | Diff
only enable sdvo hotplug irq if needed (2.62 KB, patch)
2012-08-29 13:18 UTC, Jani Nikula
Details | Diff

Description Dominik Köppl 2011-06-28 15:20:00 UTC
Created attachment 63732 [details]
kernel conifguration of linux-3.0-rc5

I'm using a Fujitsu Siemens S7110 notebook (see http://www.fujitsu.com/downloads/COMP/fpcap/notebooks/previous/factsheet_lb_S7110.pdf)
Enabling kernel mode setting for Intel GMA 950 renders the complete system sluggish - the CPU is working to 100% capacity.
I've tried Ubuntu 10.10, Arch Linux (https://bbs.archlinux.org/viewtopic.php?id=101705) and Gentoo.
Tested kernel versions are linux-2.6.36-gentoo-r8, linux-2.6.37-gentoo-r4 and linux-3.0-rc5.
The problem seems to be of the same kind as Bug 16265.

Some information about the system:

Linux eevi 3.0.0-rc5 #1 SMP Tue Jun 28 16:44:09 CEST 2011 i686 Genuine Intel(R) CPU T2400 @ 1.83GHz GenuineIntel GNU/Linux
 
 Gnu C                  4.4.5
 Gnu make               3.81
 binutils               2.20.1.20100303
 util-linux             2.18
 mount                  support
 module-init-tools      3.5
 e2fsprogs              1.41.12
 jfsutils               1.1.14
 reiserfsprogs          3.6.21
 xfsprogs               3.1.4
 pcmciautils            014
 Linux C Library        2.11.3
 Dynamic linker (ldd)   2.11.3
 Procps                 3.2.8
 Net-tools              1.60_p20100815160931
 Kbd                    1.15
 Sh-utils               8.7
 wireless-tools         29
 Modules Loaded         ipv6 cpufreq_powersave ath5k firewire_ohci tpm_tis tpm firewire_core ath tpm_bios crc_itu_t
Comment 1 Dominik Köppl 2011-06-28 15:20:44 UTC
Created attachment 63742 [details]
dmesg output
Comment 2 Dominik Köppl 2011-06-28 15:24:23 UTC
Created attachment 63752 [details]
lspci output
Comment 3 Dominik Köppl 2012-03-10 13:25:04 UTC
Problem still exists for kernel version 3.2.9
Comment 4 Daniel Vetter 2012-03-25 00:15:37 UTC
Can you please check out where the i915 kworker is chewing up so much cpu with either perf or sysprof or whatever's your favourite kernel profiler?
Comment 5 Dominik Köppl 2012-03-26 20:39:24 UTC
Created attachment 72717 [details]
kernel profiling with `perf record -a`
Comment 6 Dominik Köppl 2012-03-26 20:40:45 UTC
Created attachment 72718 [details]
profiling kworker/u:0
Comment 7 Dominik Köppl 2012-03-26 20:44:58 UTC
I've no particular favorite when it comes to kernel profiling, so I've sticked to the pref-tool.

`pref top` reveals:

PerfTop:    1098 irqs/sec  kernel:99.7%  exact:  0.0% [1000Hz cycles],  (all, 2 CPUs)
-------------------------------------------------------------------------------------------------------------------------------

    27.23%  [kernel]         [k] yenta_interrupt
    21.87%  [kernel]         [k] delay_tsc
     8.65%  [kernel]         [k] i915_read32
     8.37%  [kernel]         [k] read_hpet
     4.94%  [firewire_ohci]  [k] irq_handler
     4.89%  [kernel]         [k] uhci_irq
     3.26%  [kernel]         [k] acpi_idle_do_entry
     2.57%  [kernel]         [k] set_clock
     1.90%  [kernel]         [k] acpi_os_read_port
     1.48%  [kernel]         [k] set_data
     1.39%  [kernel]         [k] irq_entries_start
     1.30%  [kernel]         [k] get_clock
     1.07%  [kernel]         [k] native_sched_clock
     0.75%  [kernel]         [k] acpi_os_write_port
     0.60%  [kernel]         [k] _raw_spin_lock_irqsave
     0.60%  [kernel]         [k] i915_driver_irq_handler
     0.58%  [kernel]         [k] sched_clock_local
     0.47%  [kernel]         [k] handle_irq_event_percpu
     0.42%  [kernel]         [k] menu_select
     0.34%  [kernel]         [k] _raw_spin_lock
     0.33%  [kernel]         [k] _raw_spin_unlock_irqrestore
     0.33%  [kernel]         [k] trace_i915_reg_rw
...

Furthermore, I've made an odd observation while profiling:

[  785.322447] Uhhuh. NMI received for unknown reason 21 on CPU 1.
[  785.323008] Do you have a strange power saving mode enabled?
[  785.323008] Dazed and confused, but trying to continue
Comment 8 Daniel Vetter 2012-03-26 20:48:43 UTC
Hm, 1k irq/s is pretty high. Can you also attach the output of /proc/interrupts - I guess interrupt sharing is part of the problem.
Comment 9 Daniel Vetter 2012-03-26 20:52:53 UTC
Also, can you attach a sample run of vmstat 1 (wait until it looks steady) just to check whether this kind of irq load is normal for your system?
Comment 10 Chris Wilson 2012-03-26 21:00:09 UTC
1000 irq/s is just perf using NMI for wakeups. Looks like your cardbus driver has gone beserk. Mind you, it looks like i915 is quite busy as well, but that could just be vblank loading.
Comment 11 Dominik Köppl 2012-03-27 07:41:11 UTC
Created attachment 72722 [details]
/proc/interrupts
Comment 12 Dominik Köppl 2012-03-27 07:45:05 UTC
Created attachment 72723 [details]
vmstat 1
Comment 13 Daniel Vetter 2012-03-27 07:50:04 UTC
According to vmstat we don't have anything much running and the irq numbers can't explain a sluggish system. Also. I can't find the i915 interrupt in your /proc/interrupt. Are these really with i915 loaded and modesetting enabled?
Comment 14 Dominik Köppl 2012-03-27 07:59:40 UTC
Created attachment 72724 [details]
vmstat 1 with i915-kms
Comment 15 Dominik Köppl 2012-03-27 08:00:32 UTC
Created attachment 72725 [details]
/proc/interrupts with i915-kms
Comment 16 Dominik Köppl 2012-03-27 08:01:26 UTC
Comment on attachment 72722 [details]
/proc/interrupts

without i915 module
Comment 17 Dominik Köppl 2012-03-27 08:01:36 UTC
Comment on attachment 72723 [details]
vmstat 1

without i915 module
Comment 18 Dominik Köppl 2012-03-27 08:02:15 UTC
Sorry, my mistake. Uploaded the probes of the system without kms enabled.
Comment 19 Daniel Vetter 2012-03-27 08:06:28 UTC
Ok, 45k irq/s that sounds more like the problem we're looking for ;-) And given that things only go beserk once you load i915.ko the culprit seems clear. I'll write a debug patch to find out where the irqs are actually from within the gpu.
Comment 20 Daniel Vetter 2012-03-27 09:01:22 UTC
Created attachment 72726 [details]
detailed interrupt sources for i915

Please apply this patch and then dump the i915_gem_interrupt file from debugfs in a 10 second interval and attach both, i.e.

cat i915_gem_interrupt > i915_irq1; sleep 10 ; cat i915_gem_interrupt > i915_irq2
Comment 21 Dominik Köppl 2012-03-27 10:34:42 UTC
Created attachment 72729 [details]
cat /sys/kernel/debug/dri/0/i915_gem_interrupt
Comment 22 Dominik Köppl 2012-03-27 10:35:12 UTC
Created attachment 72730 [details]
cat /sys/kernel/debug/dri/0/i915_gem_interrupt after sleep 10
Comment 23 Daniel Vetter 2012-03-27 10:40:39 UTC
The picture is clear: Hotplug gone mad.

Iirc we've had a report that at least on one machine this is caused by the bios charging the battery. Can you try out what happens if you're not connected to the wall plug? Meanwhile I'll try to come up with new ideas.
Comment 24 Dominik Köppl 2012-03-27 11:28:48 UTC
Similar scenario when running on battery:

/proc/interrupts
 16:    6411896          0   IO-APIC-fasteoi   i915, yenta, uhci_hcd:usb5, firewire_ohci

vmstat 1
procs -----------memory---------- ---swap-- -----io---- -system-- ----cpu----
 r  b   swpd   free   buff  cache   si   so    bi    bo   in   cs us sy id wa
 1  0      0 963892  11488  23792    0    0   120    10 29433  541  5 44 48  2
 1  0      0 963884  11488  23796    0    0     0     0 46522  689  0 44 56  0
 1  0      0 963884  11488  23796    0    0     0     0 45372  608  0 43 57  0
 1  0      0 963884  11488  23796    0    0     0     0 45265  620  0 42 58  0

   PerfTop:     798 irqs/sec  kernel:93.9%  exact:  0.0% [1000Hz cycles],  (all, 2 CPUs)
--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------

    32.43%  [kernel]         [k] yenta_interrupt
    24.57%  [kernel]         [k] delay_tsc
     7.79%  [kernel]         [k] i915_read32
     5.02%  [kernel]         [k] set_clock
Comment 25 Daniel Vetter 2012-03-28 08:07:25 UTC
Created attachment 72737 [details]
dump hotplug regs

Oops, I've created this patch yesterday and forgot to attach it. Please apply this on top of the other patch and grab the full dmesg. It should put the hotplug reg into dmesg (ratelimited) so we know whether it's a specific pin.
Comment 26 Dominik Köppl 2012-03-29 20:01:09 UTC
Your new patch renders the system completely useless -
Whenever the kernel switches from low to high resolution the display turns completely black (e.g. no backlight) and the cpu fan goes to maximum. 
The notebook keeps frozen, I cannot even ping the ethernet connection.
Comment 27 Dominik Köppl 2012-03-29 20:28:44 UTC
Created attachment 72743 [details]
dmesg output after applying patch

Okay, there was a bug in the patch - the semicolon in the line
+           if (__ratelimit(&rl_state));
caused trouble.
After fixing it, I got this `dmesg` output.
Comment 28 Daniel Vetter 2012-03-29 21:19:07 UTC
So it's bit6 HDMIB/SDVOB causing trouble ... I'll look into this tomorrow, thanks for testing (and fixing up the patch).
Comment 29 Daniel Vetter 2012-03-29 21:21:23 UTC
Another thing: Can you please boot with drm.debug=0xe added to your kernel cmdline and attach the full output (modesetting enabled)? It doesn't matter when there's still another patch applied, I need to have all the drm output stuff.

Also, if it's not too painful: Can you grab xrandr output? You need to start X for that, though ...
Comment 30 Dominik Köppl 2012-03-30 11:06:46 UTC
Created attachment 72752 [details]
xrandr output

The machine currently runs an old version of X (x11-base/xorg-server-1.7.7-r1, x11-drivers/xf86-video-intel-2.9.1), hope that this fact is not crucial.
Comment 31 Dominik Köppl 2012-03-30 11:12:41 UTC
Created attachment 72754 [details]
huge kernel log with drm.debug=0xe

Adding drm.debug=0xe to the kernel line results in a hugh output in dmesg. I hope, I could fetch all important messages.
I've also taken a larger snapshot of the messages under http://web403.webbox555.server-home.org/drake/kern.log.bz2 (around 1469541 lines...)
Comment 32 Daniel Vetter 2012-03-31 14:47:46 UTC
Created attachment 72769 [details]
disable sdvob hotplug

A quick test patch for you to try - it should get rid of the hotplug irq storm for now. If it works, please boot againg with drm.debug=0xe and grab the full log (from the beginnig) - unfortunately the interesting part was cut off and totally swamped by irq messages.

Also, is the xrandr output correct and you do have a DVI output on your machine? Or could that DVI output be attached only to an optional base-station?

If you have a DVI connector, please check whether it works (you won't get hotplug notification though with this patch applied).
Comment 33 Dominik Köppl 2012-03-31 19:56:30 UTC
Created attachment 72775 [details]
complete dmesg with drm.debug=0xe

Patch worked out - the dmesg output seems complete.
Comment 34 Dominik Köppl 2012-03-31 20:07:15 UTC
Created attachment 72776 [details]
xrandr output with kernel 2.6.36-gentoo-r8 and no kms

My machine does not possess a DVI output.
I have a proprietary S-Video output and a 15-pin D-sub. Both connectors are analog.
Strangely enough, switching back to kernel 2.6.36 while keeping everything the same (Xorg, intel-drivers, etc.), the output of `xrandr` seems correct.
Comment 35 Daniel Vetter 2012-03-31 20:54:47 UTC
Created attachment 72777 [details]
printk hotplug_active

A new debug patch, please apply it on top of the other patch (so we can debug things without an irq storm) and grab the output of it.

Your xrandr has a DVI output too, btw: user mode setting tended to call DVI TMDS, but it's the same thing.
Comment 36 Dominik Köppl 2012-04-01 13:31:07 UTC
Created attachment 72783 [details]
dmesg - printk hotplug_active

The new line is:
[    1.068171] hotplug active is 00,00

Good to know to have a DVI-capable video card without DVI output -.-
Comment 37 Daniel Vetter 2012-04-15 15:01:53 UTC
Created attachment 72927 [details]
retrieve sdo irq event source response

Please try this patch.
Comment 38 Daniel Vetter 2012-04-15 15:55:37 UTC
Created attachment 72928 [details]
fixup sdvo hotplug confusion

Now that I have the spec at hand, yet another patch for you to try.
Comment 39 Daniel Vetter 2012-04-15 17:31:18 UTC
Ok, I've pushed out a branch with the current set of sdvo patches I have to the for-dominik branch at http://cgit.freedesktop.org/~danvet/drm/

Please try whether that fixes anything for you.
Comment 40 Dominik Köppl 2012-04-16 20:50:27 UTC
Unfortunately, the new kernel 3.4.0-rc2+ from your git repository does not deliver the desired result. 
 
PID USER      PR  NI  VIRT  RES  SHR S %CPU %MEM    TIME+  COMMAND
 2004 root      20   0  5572 1912 1520 R   99  0.2   2:54.28 syslog-ng                                           
   14 root      20   0     0    0    0 R   97  0.0   0:57.64 kworker/u:1                                                     
  806 root      20   0     0    0    0 S    2  0.0   1:13.89 kworker/u:4                                        
 1287 root      20   0     0    0    0 D    2  0.0   0:23.26 kworker/0:3                          

dmesg is again polluted with lines like
[  323.552089] [drm:i915_driver_irq_handler], hotplug event received, stat 0x00000040
Comment 41 Daniel Vetter 2012-04-16 21:41:57 UTC
Can you please install intel-gpu-tools v1.2 and attach the output file of intel_bios_dumper?
Comment 42 Dominik Köppl 2012-04-17 08:21:33 UTC
Created attachment 72942 [details]
intel_bios_dumper output

Output of intel_bios_dumper from package intel-gpu-tools-1.2
Comment 43 Chris Wilson 2012-04-26 12:07:16 UTC
Daniel, I found an erratum for 945GM SDVO hotplug, workaround is not to use it. :(
Comment 44 Daniel Vetter 2012-04-26 13:36:55 UTC
Created attachment 73097 [details]
disable sdvo hotplug on i945

Please test this patch, thanks.
Comment 45 Dominik Köppl 2012-04-26 20:31:37 UTC
Excellent.
I've applied your provided patch on vanilla kernel version 3.2.9. 
The system runs now stable, CPU usage of kworker dropped to nearly 0%. Perfect.
Comment 46 Daniel Vetter 2012-05-05 12:44:08 UTC
SDVO hotplug has only been enabled in 3.1, so strictly speaking this is a regression. The upshot is that I'll fast-forward the bugfix to 3.4, cc: stable ;-)
Comment 47 Daniel Vetter 2012-05-07 12:57:19 UTC
commit 768b107e4b3be0acf6f58e914afe4f337c00932b
Author: Daniel Vetter <daniel.vetter@ffwll.ch>
Date:   Fri May 4 11:29:56 2012 +0200

    drm/i915: disable sdvo hotplug on i945g/gm
    
    Chris Wilson dug out a hw erratum saying that there's noise on the
    interrupt line on i945G chips. We also have a bug report from a i945GM
    chip with an sdvo hotplug interrupt storm (and no apparent cause).
    
    Play it safe and disable sdvo hotplug on all i945 variants.
    
    Note that this is a regression that has been introduced in 3.1,
    when we've enabled sdvo hotplug support with
    
    commit cc68c81aed7d892deaf12d720d5455208e94cd0a
    Author: Simon Farnsworth <simon.farnsworth@onelan.co.uk>
    Date:   Wed Sep 21 17:13:30 2011 +0100
    
        drm/i915: Enable SDVO hotplug interrupts for HDMI and DVI
    
    Cc: stable@kernel.org
    Bugzilla: https://bugzilla.kernel.org/show_bug.cgi?id=38442
    Reported-and-tested-by: Dominik Köppl <dominik@devwork.org>
    Reviewed-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-Off-by: Daniel Vetter <daniel.vetter@ffwll.ch>

Pull request is out and already merged in drm-next, patch should land in Linus' tree shortly.
Comment 48 Dominik Köppl 2012-08-12 15:48:43 UTC
Currently only patch "disable sdvo hotplug on i945"
( https://bugzilla.kernel.org/attachment.cgi?id=73097 ) has been merged into the vanilla kernel. Speaking of kernel version 3.5.0, I'll get again noise from the kworkers, but this time approx. 50% occupation of the cpu.
Applying manually the patch "disable sdvob hotplug"
( https://bugzilla.kernel.org/attachment.cgi?id=72769 )
kills the noise. I don't know if I'm disabling with this patch any great feature, but the system seems now stable and quite.
Comment 49 Daniel Vetter 2012-08-12 17:02:33 UTC
Created attachment 77451 [details]
don't enable the sdvo hotplug if not needed

Does this patch help (on top of the one already merged)?
Comment 50 Dominik Köppl 2012-08-13 11:40:00 UTC
Created attachment 77611 [details]
patch for kernel-3.5.1 : don't enable the sdvo hotplug if not needed

Slightly changed your provided patch to suite kernel-3.5.1 (stable).
Unfortunately, the noise still exists and is slowing down the system.
Comment 51 Jani Nikula 2012-08-29 13:18:36 UTC
Created attachment 78741 [details]
only enable sdvo hotplug irq if needed

Dominik, please try this patch instead and report back. Thanks.

Also available in the for-dominik branch of git://gitorious.org/jani/drm.git (which is on top of drm-intel-next-queued).
Comment 52 Dominik Köppl 2012-09-02 15:57:16 UTC
Jani, thanks for your submission!
Kernel 3.6.0-rc3 from the for-dominik branch of git://gitorious.org/jani/drm.git solved the problem. I've testing your modified kernel without noticing any performance regression.
Comment 53 Daniel Vetter 2012-09-03 08:57:57 UTC
Patch merged to -fixes as

commit fcbc50da7753b210b4442ca9abc4efbd4e481f6e
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Aug 29 14:08:42 2012 +0300

    drm/i915: only enable sdvo hotplug irq if needed

Should pop up in 3.5 soonish (1-2 weeks).
Comment 54 Björn Gerhart 2012-09-03 14:19:52 UTC
I probably have the same issue with the Intel 82Q35 chipset here, but using kernel 2.6.32 (my installation is based on CentOS 6). However, the patches provided here did not solve the issue. So in the end, additionally I prevented the SDVO device hotplugging from getting re-enabled when an interrupt happens. This significantly lowered the system load.
I'd like to provide my patch for 2.6.32 and to discuss this solution with others. Would it be right to discuss it here, or should I open a separate related issue therefore?
Comment 55 Daniel Vetter 2012-09-03 15:10:59 UTC
> --- Comment #54 from Björn Gerhart <bjoern.gerhart@wincor-nixdorf.com> 
> 2012-09-03 14:19:52 ---
> I probably have the same issue with the Intel 82Q35 chipset here, but using
> kernel 2.6.32 (my installation is based on CentOS 6). However, the patches
> provided here did not solve the issue. So in the end, additionally I
> prevented
> the SDVO device hotplugging from getting re-enabled when an interrupt
> happens.
> This significantly lowered the system load.
> I'd like to provide my patch for 2.6.32 and to discuss this solution with
> others. Would it be right to discuss it here, or should I open a separate
> related issue therefore?

3.6.32 is, especially wrt drm drivers ridiculously old. But iirc rhel
does backport more recent drm drivers from recent kernels to not be so
outdated, so you need to direct your support request at
redhat/centos/whomever you've got your kernel from.

Obviously if this is an issue on recent mainline kernels, please file
a bug report (Q35 is a different chipset, so likely a different issue
at hand).
-- 
Daniel Vetter
daniel.vetter@ffwll.ch - +41 (0) 79 364 57 48 - http://blog.ffwll.ch
Comment 56 Florian Mickler 2012-10-15 21:21:21 UTC
A patch referencing this bug report has been merged in Linux v3.7-rc1:

commit ff04b35af0e40956764596e3d032f786e5451238
Author: Jani Nikula <jani.nikula@intel.com>
Date:   Wed Aug 29 14:08:42 2012 +0300

    drm/i915: only enable sdvo hotplug irq if needed

Note You need to log in before you can comment on or make changes to this bug.